--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/AppTheme">
+    tools:context="MainActivity">
+    <androidx.camera.view.PreviewView
+        android:id="@+id/viewFinder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <TextureView
         android:id="@+id/textureView"
@@ -10,7 +15,7 @@
         android:layout_height="match_parent" />
 
     <Button
-        android:id="@+id/btnCapture"
+        android:id="@+id/camera_capture_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Capturar Imagem"
@@ -22,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tons de Cinza"
-        android:layout_above="@id/btnCapture"
+        android:layout_above="@id/camera_capture_button"
         android:layout_marginBottom="16dp"
         android:layout_centerHorizontal="true" />
 
